# LLMs-from-scratch

./: .gitignore  mise.toml  pyproject.toml  setup.sh
.devcontainer/: Dockerfile  devcontainer.json
ch03/practice/: self_attention_simple.py
ch04/practice/: gpt_model.py  text_preprocessing.py
ch05/practice/: data_tools.py  gpt_generate.py  qwen_kv_cache.py
ch06/practice/: classification.py
ch07/: instruction_ft.py
